Project astraeus_ai {
  database_type: 'PostgreSQL'
  Note: '''
    Astraeus AI — AI Video Editing Platform
    Database schema for users, projects, compositions, media, rendering jobs, and AI assets.
  '''
}

// ============================================================
// ENUMS
// ============================================================

Enum user_role {
  user
  admin
}

Enum subscription_tier {
  free
  pro
  enterprise
}

Enum media_type {
  video
  audio
  image
}

Enum media_status {
  uploading
  processing
  ready
  failed
}

Enum render_status {
  queued
  processing
  completed
  failed
  cancelled
}

Enum ai_task_type {
  overlay_generation
  auto_caption
  voiceover
  script_to_video
  broll_search
  background_removal
}

Enum ai_task_status {
  pending
  processing
  completed
  failed
}

Enum ai_overlay_source {
  hyperframes
  claude_direct
}

// ============================================================
// USERS
// ============================================================

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  email varchar(255) [not null, unique]
  hashed_password varchar(255) [not null]
  full_name varchar(255)
  role user_role [not null, default: 'user']
  subscription_tier subscription_tier [not null, default: 'free']
  is_active boolean [not null, default: true]
  is_verified boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  last_login_at timestamptz

  Indexes {
    email [unique]
    created_at
  }

  Note: 'Platform users — content creators and administrators.'
}

Table refresh_tokens {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  token_hash varchar(255) [not null, unique]
  expires_at timestamptz [not null]
  revoked boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    user_id
    token_hash [unique]
    expires_at
  }

  Note: 'JWT refresh tokens for session management.'
}

// ============================================================
// PROJECTS & COMPOSITIONS
// ============================================================

Table projects {
  id uuid [pk, default: `gen_random_uuid()`]
  owner_id uuid [not null, ref: > users.id]
  name varchar(255) [not null]
  description text
  thumbnail_url text
  resolution_width integer [not null, default: 1920]
  resolution_height integer [not null, default: 1080]
  fps integer [not null, default: 30]
  duration_seconds numeric(10, 3) [not null, default: 0]
  composition jsonb [not null, default: `'{}'::jsonb`]
  is_archived boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    owner_id
    (owner_id, is_archived)
    created_at
    updated_at
  }

  Note: 'Video projects. Composition JSON is stored as JSONB for flexible schema evolution.'
}

Table project_versions {
  id uuid [pk, default: `gen_random_uuid()`]
  project_id uuid [not null, ref: > projects.id]
  version_number integer [not null]
  composition jsonb [not null]
  created_by uuid [ref: > users.id]
  change_summary varchar(500)
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (project_id, version_number) [unique]
    project_id
    created_at
  }

  Note: 'Version history for project compositions. Enables undo/redo and audit trail.'
}

// ============================================================
// MEDIA
// ============================================================

Table media {
  id uuid [pk, default: `gen_random_uuid()`]
  owner_id uuid [not null, ref: > users.id]
  filename varchar(500) [not null]
  original_filename varchar(500) [not null]
  mime_type varchar(100) [not null]
  media_type media_type [not null]
  status media_status [not null, default: 'uploading']
  size_bytes bigint [not null]
  storage_url text [not null]
  storage_key varchar(500) [not null]
  duration_seconds numeric(10, 3)
  width integer
  height integer
  fps numeric(6, 3)
  bitrate integer
  codec varchar(50)
  thumbnail_url text
  waveform_data jsonb
  metadata jsonb [default: `'{}'::jsonb`]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    owner_id
    (owner_id, media_type)
    (owner_id, status)
    created_at
    storage_key [unique]
  }

  Note: 'Uploaded media files (video, audio, image). Stored in DigitalOcean Spaces.'
}

Table project_media {
  project_id uuid [not null, ref: > projects.id]
  media_id uuid [not null, ref: > media.id]
  added_at timestamptz [not null, default: `now()`]

  Indexes {
    (project_id, media_id) [pk]
    project_id
    media_id
  }

  Note: 'Join table tracking which media is used in which project.'
}

// ============================================================
// RENDERING
// ============================================================

Table render_jobs {
  id uuid [pk, default: `gen_random_uuid()`]
  project_id uuid [not null, ref: > projects.id]
  user_id uuid [not null, ref: > users.id]
  composition_snapshot jsonb [not null]
  status render_status [not null, default: 'queued']
  progress numeric(5, 2) [not null, default: 0]
  output_url text
  output_storage_key varchar(500)
  output_size_bytes bigint
  output_duration_seconds numeric(10, 3)
  resolution_width integer [not null]
  resolution_height integer [not null]
  fps integer [not null]
  ffmpeg_command text
  error_message text
  queued_at timestamptz [not null, default: `now()`]
  started_at timestamptz
  completed_at timestamptz

  Indexes {
    project_id
    user_id
    status
    (user_id, status)
    queued_at
    completed_at
  }

  Note: 'FFmpeg render jobs. Stores a composition snapshot for reproducibility.'
}

// ============================================================
// AI LAYER
// ============================================================

Table ai_tasks {
  id uuid [pk, default: `gen_random_uuid()`]
  project_id uuid [not null, ref: > projects.id]
  user_id uuid [not null, ref: > users.id]
  task_type ai_task_type [not null]
  status ai_task_status [not null, default: 'pending']
  prompt text
  context jsonb [default: `'{}'::jsonb`]
  result jsonb
  error_message text
  tokens_used integer
  cost_usd numeric(10, 6)
  created_at timestamptz [not null, default: `now()`]
  started_at timestamptz
  completed_at timestamptz

  Indexes {
    project_id
    user_id
    task_type
    status
    (user_id, task_type)
    created_at
  }

  Note: 'All AI generation tasks: Claude prompts, HyperFrames renders, Whisper, ElevenLabs.'
}

Table ai_overlays {
  id uuid [pk, default: `gen_random_uuid()`]
  ai_task_id uuid [not null, ref: > ai_tasks.id]
  project_id uuid [not null, ref: > projects.id]
  source ai_overlay_source [not null, default: 'hyperframes']
  html_content text
  storage_url text [not null]
  storage_key varchar(500) [not null]
  duration_seconds numeric(10, 3) [not null]
  width integer [not null]
  height integer [not null]
  has_alpha boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    ai_task_id
    project_id
    storage_key [unique]
    created_at
  }

  Note: 'AI-generated overlay clips rendered by HyperFrames.'
}

Table captions {
  id uuid [pk, default: `gen_random_uuid()`]
  ai_task_id uuid [ref: > ai_tasks.id]
  project_id uuid [not null, ref: > projects.id]
  media_id uuid [ref: > media.id]
  language varchar(10) [not null, default: 'en']
  segments jsonb [not null]
  srt_content text
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    project_id
    media_id
    ai_task_id
  }

  Note: 'Auto-generated captions from OpenAI Whisper. Segments stored as JSONB with word-level timing.'
}

Table voiceovers {
  id uuid [pk, default: `gen_random_uuid()`]
  ai_task_id uuid [not null, ref: > ai_tasks.id]
  project_id uuid [not null, ref: > projects.id]
  script text [not null]
  voice_id varchar(100) [not null]
  voice_name varchar(255)
  storage_url text [not null]
  storage_key varchar(500) [not null]
  duration_seconds numeric(10, 3) [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    project_id
    ai_task_id
    storage_key [unique]
  }

  Note: 'AI-generated voiceover audio from ElevenLabs.'
}

// ============================================================
// AUDIT & ADMIN
// ============================================================

Table audit_logs {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [ref: > users.id]
  action varchar(100) [not null]
  resource_type varchar(100) [not null]
  resource_id uuid
  details jsonb [default: `'{}'::jsonb`]
  ip_address inet
  user_agent text
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    user_id
    resource_type
    (resource_type, resource_id)
    action
    created_at
  }

  Note: 'Audit log of administrative and security-relevant actions.'
}

Table usage_quotas {
  user_id uuid [pk, ref: > users.id]
  storage_bytes_used bigint [not null, default: 0]
  storage_bytes_limit bigint [not null, default: 1073741824]
  render_minutes_used numeric(10, 2) [not null, default: 0]
  render_minutes_limit numeric(10, 2) [not null, default: 60]
  ai_tokens_used integer [not null, default: 0]
  ai_tokens_limit integer [not null, default: 100000]
  period_start timestamptz [not null, default: `now()`]
  period_end timestamptz [not null]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'Per-user usage quotas by subscription tier. Reset monthly.'
}